Store carrier information in verification sessions